--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon  ./bin/www"
+    "start": "node app.js"
+    //"start": "nodemon  ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,5 +20,9 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1"
-  }
+  },
+    "engines": {
+      "node": "v12.11.1"
+}
+
 }
