to send 2 mails

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "instagram-node": "^0.5.8",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "md5": "^2.2.1",
     "mongodb": "^3.3.3",
     "morgan": "~1.9.1",
